--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ version '1.0'
 apply plugin: 'java'
 apply plugin: 'idea'
 
-sourceCompatibility = 1.6
+sourceCompatibility = 1.7
 
 repositories {
     mavenCentral()
@@ -14,6 +14,7 @@ dependencies {
     compile 'org.apache.hadoop:hadoop-common:2.7.2'
     compile 'org.apache.hadoop:hadoop-client:2.7.2'
     compile 'org.apache.hadoop:hadoop-test:1.2.1'
+    compile 'org.apache.commons:commons-lang3:3.4'
 }
 
 jar {
