--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'ru.edu.mipt.UUIDRandomise'
     }
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
+//    from {
+//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+//    }
 }
